Resolves tdf#158780 - Enable "Reduce Resolution" by default

Change-Id: Ib60f8484ebf6b140c52c7d2b6f190eac9dd3ade1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161612
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>